# upr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai_coach/: __init__.py  models.py  routes.py  service.py
backend/app/ai_provider/: __init__.py  base.py  gemini.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  chat_message.py  exercise.py  exercise_chat.py  video_analysis.py  workout.py
backend/app/exercise_chat/: __init__.py  models.py  routes.py  service.py
backend/app/video_analysis/: __init__.py  models.py  routes.py  service.py
backend/app/workout/: __init__.py  models.py  routes.py  service.py
backend/tests/: __init__.py  conftest.py
docs/: BACKEND.md  DATABASE.md  FRONTEND.md  PRODUCT_SENSE.md  RELIABILITY.md  SECURITY.md  product.md  stack.md
docs/design-docs/: core-beliefs.md  index.md  security-future-reference.md
docs/exec-plans/: PLANS.md  index.md  tech-debt-tracker.md
docs/product-specs/: exercise-chat.md  exercises-base.md  index.md  product.md  videosinstruction.md  workout.md
docs/references/: expo-localization.md  expo-router.md  expo.md  fastapi.md  i18next-browser-languagedetector.md  i18next.md  index.md  pydantic-settings.md  react.md  (+5 more)
mobile/: .env.example  README.md  app.json  package-lock.json  package.json
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+57 files in other folders)
