[project]
name = "upr-backend"
version = "0.0.1"
description = "UPR backend — FastAPI сервер для приложения тренировок (структурный скелет, Phase 1 / Track C)."
requires-python = ">=3.13,<3.14"
authors = [{ name = "Кристина" }]
license = { text = "Proprietary — see repository owner" }
readme = "README.md"

dependencies = [
    "fastapi[standard]>=0.118.0,<0.119.0",
    "sqlmodel>=0.0.24,<0.1.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.6,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
